<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DMS Explorer</string>
    <string name="title_device_select">Device Select</string>
    <string name="no_available_network">Please connect to the local network</string>
    <string name="toast_not_support_drm">This app does not support playback of DRM content.</string>
    <string name="toast_command_error">Error occurred</string>
    <string name="toast_download_error">Error occurred</string>
    <string name="toast_decode_error">Error occurred</string>
    <string name="toast_player_error">Error occurred</string>
    <string name="toast_delete_succeed">Deletion success</string>
    <string name="toast_delete_error">Error occurred</string>
    <string name="toast_repeat_play_once">Play 1 item</string>
    <string name="toast_repeat_sequential">Play automatically</string>
    <string name="toast_repeat_repeat_all">Repeat folder</string>
    <string name="toast_repeat_repeat_one">Repeat 1 item</string>
    <string name="toast_launch_error">Fail to launch</string>
    <string name="toast_currently_muted">Currently muted</string>
    <string name="seek_bar_scrub_normal">seek (x1/1)</string>
    <string name="seek_bar_scrub_half">seek (x1/2)</string>
    <string name="seek_bar_scrub_quarter">seek (x1/4)</string>
    <string name="network_tb">TB</string>
    <string name="network_bs">BS</string>
    <string name="network_cs">CS</string>
    <string name="action_play_title">Play/Pause</string>
    <string name="action_play_description">Play/Pause</string>
    <string name="action_next_title">Next</string>
    <string name="action_next_description">Skip Next</string>
    <string name="action_previous_title">Prev</string>
    <string name="action_previous_description">Skip Previous</string>
    <string name="prop_title">Title:</string>
    <string name="prop_channel">Channel:</string>
    <string name="prop_date">Date:</string>
    <string name="prop_schedule">Schedule:</string>
    <string name="prop_genre">Genre:</string>
    <string name="prop_album">Album:</string>
    <string name="prop_artist">Artist:</string>
    <string name="prop_actor">Actor:</string>
    <string name="prop_author">Author:</string>
    <string name="prop_creator">Creator:</string>
    <string name="prop_description">Description:</string>
    <string name="prop_long_description">Long Description:</string>
    <string name="prop_chapter_info">Chapter Info:</string>
    <string name="action_settings">Settings</string>
    <string name="action_update">Update</string>
    <string name="action_sort">Sort</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_playback">Playback</string>
    <string name="pref_message_launch_app_on">Play by this app.</string>
    <string name="pref_message_launch_app_off">Rely other app.</string>
    <string name="pref_category_movie">Movie</string>
    <string name="pref_category_music">Music</string>
    <string name="pref_category_photo">Photo</string>
    <string name="pref_title_launch_app_movie">Movie playback</string>
    <string name="pref_title_launch_app_music">Music playback</string>
    <string name="pref_title_launch_app_photo">Photo playback</string>
    <string name="pref_header_function">Function</string>
    <string name="pref_category_link">Link</string>
    <string name="pref_title_open_url">Open URL link</string>
    <string name="pref_message_open_url_on">Use Custom Tabs</string>
    <string name="pref_message_open_url_off">Launch Browser app</string>
    <string name="pref_category_tap_and_long_tap_operation">Tap and Long tap operation</string>
    <string name="pref_title_device_detail_on_tap">Device Select</string>
    <string name="pref_message_device_detail_on_tap_on">Tap: Show the device detail\nLong tap : Go to top directory</string>
    <string name="pref_message_device_detail_on_tap_off">Tap: Go to top directory\nLong tap : Show the device detail</string>
    <string name="pref_title_content_detail_on_tap">Content Select</string>
    <string name="pref_message_content_detail_on_tap_on">Tap: Show the content detail\nLong tap : Launch the player</string>
    <string name="pref_message_content_detail_on_tap_off">Tap: Launch the player\nLong tap : Show the content detail</string>
    <string name="pref_category_delete">Delete</string>
    <string name="pref_title_delete">Delete content</string>
    <string name="pref_message_delete_on">Show delete button, if possible.</string>
    <string name="pref_message_delete_off">Don\'t show delete button.</string>
    <string name="pref_header_view">View</string>
    <string name="pref_category_theme">Theme</string>
    <string name="pref_title_dark_theme">Dark theme</string>
    <string name="pref_message_dark_theme">Change to the dark theme. This app will be restart to apply the theme settings.</string>
    <string name="dialog_title_change_theme">Change theme</string>
    <string name="dialog_message_change_theme">Do you want to change the theme?\nIf you select "OK", this app will be restarted and the theme will be changed.</string>

    <string name="pref_header_expert">Expert</string>
    <string name="pref_title_for_expert">Settings for Expert</string>
    <string name="pref_message_for_expert">This settings are for people who want to stick to details. Depending on how to set it, operation becomes impossible or operation may become unstable. Please set only those who are self-resolvable when problems occur</string>
    <string name="pref_category_content_list">Customize Content List</string>
    <string name="pref_title_content_sort">Sort settings</string>
    <string name="pref_category_orientation">Screen Orientation</string>
    <string name="pref_title_category_orientation">Caution</string>
    <string name="pref_message_category_orientation">These settings are highly dependent on the device. In some cases, settings may not be applied or display may be disturbed. If you have a problem, please return the setting to "unspecified"</string>
    <string name="pref_title_orientation_collective">Collective setting</string>
    <string name="pref_title_orientation_browse">Browse Screen</string>
    <string name="pref_title_orientation_movie">Movie Playback Screen</string>
    <string name="pref_title_orientation_music">Music Playback Screen</string>
    <string name="pref_title_orientation_photo">Photo Screen</string>
    <string name="pref_title_orientation_dmc">DMC Screen</string>

    <string name="orientation_unspecified">Unspecified</string>
    <string name="orientation_portrait">Portrait</string>
    <string name="orientation_landscape">Landscape</string>
    <string name="orientation_reverse_portrait">Reverse Portrait</string>
    <string name="orientation_reverse_landscape">Reverse Landscape</string>

    <string name="pref_category_movie_ui">Customize Movie UI</string>
    <string name="pref_title_movie_ui_do_not_show_on_start">Do not show UI on start</string>
    <string name="pref_message_movie_ui_do_not_show_on_start">When set to ON, do not show UI on playback start</string>
    <string name="pref_title_movie_ui_do_not_show_on_touch">Do not show UI on touch</string>
    <string name="pref_message_movie_ui_do_not_show_on_touch">When set to ON, UI is not shown by simply touching. Please swipe inward from the top outside the screen</string>
    <string name="pref_title_movie_ui_do_not_show_title">Do not show content name</string>
    <string name="pref_message_movie_ui_do_not_show_title">When set to ON, do not show content name on ActionBar</string>
    <string name="pref_title_movie_ui_transparent">Make the background of the UI panel transparent</string>
    <string name="pref_message_movie_ui_transparent">When set to ON, make the background of the UI panel completely transparent</string>

    <string name="pref_category_photo_ui">Customize Photo UI</string>
    <string name="pref_title_photo_ui_do_not_show_on_start">Do not show UI on start</string>
    <string name="pref_message_photo_ui_do_not_show_on_start">When set to ON, do not show UI on playback start</string>
    <string name="pref_title_photo_ui_do_not_show_on_touch">Do not show UI on touch</string>
    <string name="pref_message_photo_ui_do_not_show_on_touch">When set to ON, UI is not shown by simply touching. Please swipe inward from the top outside the screen</string>
    <string name="pref_title_photo_ui_do_not_show_title">Do not show content name</string>
    <string name="pref_message_photo_ui_do_not_show_title">When set to ON, do not show content name on ActionBar</string>
    <string name="pref_title_photo_ui_transparent">Make the background of the UI panel transparent</string>
    <string name="pref_message_photo_ui_transparent">When set to ON, make the background of the UI panel completely transparent</string>

    <string name="pref_header_information">Information</string>
    <string name="pref_title_play_store">Google Play Store</string>
    <string name="pref_message_play_store">Waiting for evaluation, comments and requests</string>
    <string name="pref_title_privacy_policy">Privacy policy</string>
    <string name="pref_message_privacy_policy">Show privacy policy</string>
    <string name="pref_title_copyright">Author</string>
    <string name="pref_message_copyright">© 2016 大前良介 (OHMAE Ryosuke)</string>
    <string name="pref_title_version_number">Version</string>
    <string name="pref_title_license">Open Source Licenses</string>
    <string name="pref_message_license">Show license of OSS used in this app</string>
    <string name="pref_title_source_code">Source code</string>
    <string name="pref_message_source_code">Source code of this app is published under the MIT license</string>
    <string name="repeat_introduction_title">Repeat setting</string>
    <string name="repeat_introduction_subtitle">You can select the repeat mode.</string>
    <string name="dialog_title_select_resource">Resource</string>
    <string name="dialog_title_select_device">Playback device</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_title_delete">Caution : Delete</string>
    <string name="dialog_message_delete">\"%1$s\" will be deleted from server.\nDeleting it can not be undone.\nIs it OK?</string>
    <string name="dialog_title_sort">Sort</string>
    <string name="dialog_message_sort">[experimental feature]\nSet content sorting key / order. If a problem occurs, change it back to \"None\". If you change in a folder with a large amount of content, app may freeze.</string>
    <string name="dialog_sort_key">Sort key</string>
    <string name="dialog_sort_key_none">None (default)</string>
    <string name="dialog_sort_key_name">Name</string>
    <string name="dialog_sort_key_date">Date</string>
    <string name="dialog_sort_order">Sort order</string>
    <string name="dialog_sort_order_ascending">ascending</string>
    <string name="dialog_sort_order_descending">descending</string>
    <string name="pref_summary_sort_key_none">None</string>
    <string name="pref_summary_sort_key_name">Name</string>
    <string name="pref_summary_sort_key_date">Date</string>
    <string name="pref_summary_sort_order_ascending">ascending</string>
    <string name="pref_summary_sort_order_descending">descending</string>
    <string name="help_text">DLNA server not found. Please check the following.</string>
    <string name="help_text1">WiFi or wired LAN connection is required. It will not work over a cellular line.</string>
    <string name="help_text2">Make sure that a DLNA server is connected to the connected network. Also, make sure that the DLNA server is enabled in the settings of your server, etc. For information on how to set this up, contact the server manufacturer.</string>
</resources>
