<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_category_link"
        >

        <SwitchPreference
            android:defaultValue="true"
            android:key="USE_CUSTOM_TABS"
            android:title="@string/pref_title_open_url"
            android:summaryOn="@string/pref_message_open_url_on"
            android:summaryOff="@string/pref_message_open_url_off"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_tap_and_long_tap_operation"
        >

        <SwitchPreference
            android:defaultValue="true"
            android:key="SHOULD_SHOW_DEVICE_DETAIL_ON_TAP"
            android:title="@string/pref_title_device_detail_on_tap"
            android:summaryOn="@string/pref_message_device_detail_on_tap_on"
            android:summaryOff="@string/pref_message_device_detail_on_tap_off"
            />

        <SwitchPreference
            android:defaultValue="true"
            android:key="SHOULD_SHOW_CONTENT_DETAIL_ON_TAP"
            android:title="@string/pref_title_content_detail_on_tap"
            android:summaryOn="@string/pref_message_content_detail_on_tap_on"
            android:summaryOff="@string/pref_message_content_detail_on_tap_off"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_delete">

        <SwitchPreference
            android:defaultValue="false"
            android:key="DELETE_FUNCTION_ENABLED"
            android:title="@string/pref_title_delete"
            android:summaryOn="@string/pref_message_delete_on"
            android:summaryOff="@string/pref_message_delete_off"
            />
    </PreferenceCategory>
</PreferenceScreen>
