<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_category_orientation"
        >
        <Preference
            android:selectable="false"
            android:title="@string/pref_title_category_orientation"
            android:summary="@string/pref_message_category_orientation"
            />
        <ListPreference
            android:key="ORIENTATION_COLLECTIVE"
            android:title="@string/pref_title_orientation_collective"
            android:entries="@array/orientation_entries"
            android:entryValues="@array/orientation_values"
            />
        <ListPreference
            android:defaultValue="UNSPECIFIED"
            android:entries="@array/orientation_entries"
            android:entryValues="@array/orientation_values"
            android:key="ORIENTATION_BROWSE"
            android:title="@string/pref_title_orientation_browse"
            />
        <ListPreference
            android:defaultValue="UNSPECIFIED"
            android:entries="@array/orientation_entries"
            android:entryValues="@array/orientation_values"
            android:key="ORIENTATION_MOVIE"
            android:title="@string/pref_title_orientation_movie"
            />
        <ListPreference
            android:defaultValue="UNSPECIFIED"
            android:entries="@array/orientation_entries"
            android:entryValues="@array/orientation_values"
            android:key="ORIENTATION_MUSIC"
            android:title="@string/pref_title_orientation_music"
            />
        <ListPreference
            android:defaultValue="UNSPECIFIED"
            android:entries="@array/orientation_entries"
            android:entryValues="@array/orientation_values"
            android:key="ORIENTATION_PHOTO"
            android:title="@string/pref_title_orientation_photo"
            />
        <ListPreference
            android:defaultValue="UNSPECIFIED"
            android:entries="@array/orientation_entries"
            android:entryValues="@array/orientation_values"
            android:key="ORIENTATION_DMC"
            android:title="@string/pref_title_orientation_dmc"
            />
    </PreferenceCategory>
</PreferenceScreen>