<preference-headers
    xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="net.mm2d.dmsexplorer.view.SettingsActivity$PlaybackPreferenceFragment"
        android:icon="@drawable/ic_play_settings"
        android:title="@string/pref_header_playback"
        />

    <header
        android:fragment="net.mm2d.dmsexplorer.view.SettingsActivity$FunctionPreferenceFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/pref_header_function"
        />

    <header
        android:fragment="net.mm2d.dmsexplorer.view.SettingsActivity$ViewPreferenceFragment"
        android:icon="@drawable/ic_view"
        android:title="@string/pref_header_view"
        />

    <header
        android:fragment="net.mm2d.dmsexplorer.view.SettingsActivity$InformationPreferenceFragment"
        android:icon="@drawable/ic_info"
        android:title="@string/pref_header_information"
        />

</preference-headers>
