<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_message_sort"
            android:textColor="?attr/themeSubTextColor"
            android:textSize="@dimen/text_size_message"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dialog_sort_key"
            android:textColor="?attr/themeTextColor"
            android:textSize="@dimen/text_size_main"
            />

        <Spinner
            android:id="@+id/sort_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dialog_sort_order"
            android:textColor="?attr/themeTextColor"
            android:textSize="@dimen/text_size_main"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sort_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/dialog_sort_order_descending"
            android:textColor="?attr/themeSubTextColor"
            android:textSize="@dimen/text_size_message"
            />
    </LinearLayout>
</ScrollView>
